src/tools/runk/vendor/derive_builder/tests/compile-fail/custom_error_no_from.stderr
error[E0277]: the trait bound `Error: std::convert::From<derive_builder::UninitializedFieldError>` is not satisfied
  --> $DIR/custom_error_no_from.rs:21:55
   |
21 | #[builder(build_fn(validate = "check_person", error = "Error"))]
   |                                                       ^^^^^^^ the trait `std::convert::From<derive_builder::UninitializedFieldError>` is not implemented for `Error`
   |
   = note: required because of the requirements on the impl of `std::convert::Into<Error>` for `derive_builder::UninitializedFieldError`
   = note: required by `std::convert::Into::into`
